v0.3.0rc - XXXX
  - Actions: added FadeOutBLTiles, FadeOutUpTiles, FadeOutDownTiles
  - Actions: renamed FadeOutTiles to FadeOutTRTiles
  - Actions: added Ripple3D effect
  - Actions: Waves. parameter horizontal_sin and vertical_sin renamed to hsin and vsin
  - Actions: renamed ReverseTime to _ReverseTime to prevent massive usage
  - Director: default projection is 3D (not glOrtho)
  - Transitions: renamed ShrinkAndGrowTransition -> ShrinkGrowTransition
  - Transitions: renamed ShuffleTilesTransition -> ShuffleTransition
  - Transitions: reanamed CurtainTransition to FadeTRTransition
  - Transitions: added FadeBLTransition, FadeUpTransition, FadeDownTransition
  - Transitions: added test for transitions

v0.3.0beta0 - May 5th, 2008
  - Actions: actions are defined in the actions/ folder
  - Actions: Goto renamed to MoveTo and Move renamed to MoveBy
     Scale renamed to ScaleBy. Added ScaleTo
     Rotate renamed to RotateBy. Added RotateTo
  - Actions: Jump renamed to JumpBy. Added JumpTo.
    Changed the JumpBy/To API. JumpBy( (x,y), height, number_of_jumps, duration)
  - Actions: Added IntervalAction decorators:
     Accelerate, AccelDeccel, Speed, ReverseTime
  - Actions: time can be modified in a whole sequence. eg: Accelerate( sequence )
  - Actions: Added a new base class: InstantAction 
  - Actions: every cocosnode support actions. eg: sprites, layers, scenes, etc.
  - Actions: Added grid (mesh distortion) effects:
     Liquid, Waves, Shaky3D, ShakyTiles3D, ShuffleTiles, QuadMoveBy,
     MoveCornerUp, MoveCornerDown, SkewVertical, SkewHorizontal,
     FlipX, FlipY, Flip, CornerSwap, ShatteredTiles3D,
     FadeOutTiles, Waves3D, FlipX3D, FlipY3D, Lens3D,
     JumpTiles3D, WavesTiles3D, Twirl
  - Actions: Added Waves decorators: AccelAmplitude, DeccelAmplitude,
       AccelDeccelAmplitude.
  - Actions: Added camera effects: CameraOrbit
  - Cocos: Renamed project to cocos2d
  - Director: Added DefaultHandler:
     ESCAPE: director.pop